# llm-prompt-shield

./: .gitignore  LICENSE  MANIFEST.in  README.md  integration_test.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: publish.yml
llm_prompt_shield/: __init__.py  detector.py  user_config.py
llm_prompt_shield/integrations/: __init__.py  autogen.py  langchain.py
llm_prompt_shield/layers/: pattern_detector.py  semantic_analyzer.py
model_training/: train_xgb.py
prompt_shield/: config.yaml  detector.py  policy.py  scanner.py
prompt_shield/data/: hazard_codes.yaml  hazard_embeddings.joblib  pattern_detector.yaml  patterns.yaml  vectorizer.joblib  xgb_model.joblib
prompt_shield/integrations/: autogen.py
prompt_shield/layers/: classifier.py  heuristic.py  semantic_analyzer.py
