[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-prompt-shield"
dynamic = ["version"]
description = "Lightweight prompt injection detection and blocking"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Rango Ramesh", email = "rango@celestials.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=5.0.0",
    "numpy>=1.20.0", 
    "joblib>=1.0.0",
    "sentence-transformers>=2.0.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.0.200",
]
autogen = [
    "pyautogen>=0.2.0",
]
integrations = [
    "langchain>=0.0.200",
    "pyautogen>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/rango-ramesh/llm-prompt-shield"
Repository = "https://github.com/rango-ramesh/llm-prompt-shield"
Documentation = "https://github.com/rango-ramesh/llm-prompt-shield#readme"
"Bug Tracker" = "https://github.com/rango-ramesh/llm-prompt-shield/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_prompt_shield*"]

[tool.setuptools.package-data]
llm_prompt_shield = ["data/*.yaml", "*.yaml"]